# freakml

./: CMakeLists.txt  Makefile  README.md  build.sh
data/: corr_data.txt  kmeans.txt  lr.txt  lr2.txt  mat.txt
include/: .freakDatum.h.swp  freakConfig.h  freakCriteria.h  freakDatum.h  freakDecisionTree.h  freakEM.h  freakException.h  freakGMM.h  freakKMeans.h  freakLR.h  freakLabel.h  freakLog.h  freakMath.h  freakMatrix.h  freakRecord.h  freakThread.h  freakThreadJob.h  freakThreadPool.h  freakWeight.h
src/: freakDatum.cpp  freakGMM.cpp  freakKMeans.cpp  freakLR.cpp  freakThread.cpp  freakThreadJob.cpp  freakThreadPool.cpp
test/: testCriteria.cpp  testDatum.cpp  testGMM.cpp  testKMeans.cpp  testLR.cpp  testLabel.cpp  testMat.cpp  testMath.cpp  testRecord.cpp  testThread.cpp  testThreadPool.cpp
tools/: testDatum.cpp
